--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^5.15.15",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
