--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
