--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-spring": "^9.7.3"
   },
   "devDependencies": {
+    "@next/codemod": "^14.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
