--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3"
   },
@@ -26,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
