--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.15",
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -28,6 +33,7 @@
   },
   "devDependencies": {
     "@next/codemod": "^14.1.4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -37,6 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "ts-inquisition": "^0.1.0",
     "typescript": "^5"
