--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-modal": "^3.16.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
+    "sweetalert2": "^11.10.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
