--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@types/axios": "^0.14.0",
+    "@types/formidable": "^3.4.5",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "formidable": "^3.5.1",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
