--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "inquisition": "ts-inquisition --fix"
+    "inquisition": "ts-inquisition --fix",
+    "prisma:generate": "npx prisma generate --schema=./src/prisma/schema.prisma",
+    "prisma:migrate": "npx prisma migrate dev --schema=./src/prisma/schema.prisma"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
