--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "inquisition": "ts-inquisition --fix",
     "prisma:generate": "npx prisma generate --schema=./src/prisma/schema.prisma",
-    "prisma:migrate": "npx prisma migrate dev --schema=./src/prisma/schema.prisma"
+    "prisma:migrate": "npx prisma migrate dev --schema=./src/prisma/schema.prisma",
+    "mailhog": "mailhog"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -21,11 +22,13 @@
     "@prisma/client": "^5.12.1",
     "@types/axios": "^0.14.0",
     "@types/formidable": "^3.4.5",
+    "@types/nodemailer": "^6.4.14",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "formidable": "^3.5.1",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
@@ -39,7 +42,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@next/codemod": "^14.1.4",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
+    "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
