--- a/.env
+++ b/.env
@@ -7,8 +7,12 @@
 DATABASE_URL="postgresql://pradiep:pradiep@localhost:5432/next_db?schema=public"
 
 NEXTAUTH_URL=http://localhost:3000 # Replace with your production URL
-EMAIL_SERVER_USER=c6a99fcf0e8eb8749a93d5fea097c624-19806d14-1f48a9c1
-EMAIL_SERVER_PASSWORD=19806d14-1f48a9c1
-EMAIL_SERVER_HOST=smtp.mailgun.org
-EMAIL_SERVER_PORT=587
-EMAIL_FROM=pradeep663299@gmail.com
+# EMAIL_SERVER_USER=c6a99fcf0e8eb8749a93d5fea097c624-19806d14-1f48a9c1
+# EMAIL_SERVER_PASSWORD=19806d14-1f48a9c1
+# EMAIL_SERVER_HOST=smtp.mailgun.org
+# EMAIL_SERVER_PORT=587
+# EMAIL_FROM=pradeep663299@gmail.com
+# Maildev settings
+EMAIL_SERVER_HOST=localhost
+EMAIL_SERVER_PORT=1025
+EMAIL_FROM=npreply@example.com
