--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DATABASE_URL="postgresql://pradiep:pradiep@localhost:5432/next_db?schema=public"
 
 NEXTAUTH_SECRET="rDatO8KRs7a6EG89nZtS3DFXJYjacj0p"
 
-NEXTAUTH_URL=http://localhost:3000 # Replace with your production URL
+NEXTAUTH_URL=http://localhost:3000
 # EMAIL_SERVER_USER=c6a99fcf0e8eb8749a93d5fea097c624-19806d14-1f48a9c1
 # EMAIL_SERVER_PASSWORD=19806d14-1f48a9c1
 # EMAIL_SERVER_HOST=smtp.mailgun.org
