--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-modal": "^3.16.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
+    "sharp": "^0.33.3",
     "sweetalert2": "^11.10.7",
     "zod": "^3.22.4"
   },
@@ -51,6 +52,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "maildev": "^2.1.0",
+    "npm-force-resolutions": "^0.0.10",
     "postcss": "^8",
     "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
