--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
+    "otp-generator": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
