--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@next/codemod": "^14.1.4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.12.7",
+    "@types/otp-generator": "^4.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
