some new changes on otp

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "formidable": "^3.5.1",
+    "mui-one-time-password-input": "^2.0.2",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
