--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
