--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,10 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@/pages/*": ["src/pages/*"]
+      "@/*": ["src/*"],
+      "@/pages/*": ["src/pages/*"],
+      "@/components/*": ["src/components/*"],
+      "@/images/*": ["src/images/*"]
     }
   },
   "include": [
