done resend otp done

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@prisma/client": "^5.12.1",
     "@types/axios": "^0.14.0",
     "@types/formidable": "^3.4.5",
-    "@types/nodemailer": "^6.4.14",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "express-rate-limit": "^7.2.0",
     "formidable": "^3.5.1",
     "mui-one-time-password-input": "^2.0.2",
     "next": "^14.2.3",
@@ -45,7 +45,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@next/codemod": "^14.1.4",
     "@types/bcrypt": "^5.0.2",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/node": "^20.12.7",
+    "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
