--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@next/codemod": "^14.1.4",
     "@types/bcrypt": "^5.0.2",
     "@types/express-rate-limit": "^6.0.0",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
