--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "jsx": "preserve",
     "incremental": true,
     "target": "ES2015",
+    "typeRoots": ["node_modules/@types"],
+    "types": [],
     "plugins": [
       {
         "name": "next"
