login is donand processing both condiations going on

--- a/.env
+++ b/.env
@@ -3,8 +3,9 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+TIME_ZONE=setDefaultZone('Asia/Kolkata')
 
-DATABASE_URL="postgresql://pradiep:pradiep@localhost:5432/next_db?schema=public"
+DATABASE_URL="postgresql://postgres:pradiep@localhost:5432/next_db?schema=public"
 
 NEXTAUTH_SECRET="rDatO8KRs7a6EG89nZtS3DFXJYjacj0p"
 
