--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prisma:migrate": "npx prisma migrate dev --schema=./src/prisma/schema.prisma"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.14.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
@@ -24,10 +25,11 @@
     "@types/formidable": "^3.4.5",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "elasticsearch": "^16.7.3",
     "express-rate-limit": "^7.2.0",
     "formidable": "^3.5.1",
     "mui-one-time-password-input": "^2.0.2",
-    "next": "^14.2.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.1",
@@ -35,10 +37,12 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
     "react-modal": "^3.16.1",
+    "react-responsive": "^10.0.0",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
     "sharp": "^0.33.3",
     "sweetalert2": "^11.10.7",
+    "timers-browserify": "^2.0.12",
     "zod": "^3.22.4"
   },
   "devDependencies": {
